# flipboard.V2

./: .gitignore  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  Specification_Book.md  cleanup.sh  docker-compose.test.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  run_dev.sh  test_auth.ps1
backend/app/: dependencies.py  main.py
backend/app/core/: config.py
backend/app/crud/: article.py  comment.py  interaction.py  magazine.py  news.py  notification.py  topic.py  user.py
backend/app/db/: database.py
backend/app/models/: __init__.py  article.py  comment.py  interaction.py  magazine.py  news.py  notification.py  topic.py  user.py
backend/app/routes/: articles.py  auth.py  comments.py  interactions.py  magazines.py  news.py  notifications.py  topics.py  users.py
backend/app/schemas/: __init__.py  article.py  comment.py  interaction.py  magazine.py  notification.py  topic.py  user.py
backend/app/security/: token.py
backend/app/utils/: article_enricher.py  email.py  newsletter.py  scraper.py
backend/scripts/: seed_database.py
backend/tests/: test_dependencies.py  test_main.py
backend/tests/crud/: test_article.py  test_comment.py  test_interaction.py  test_magazine.py  test_news.py  test_topic.py  test_user.py
backend/tests/models/: test_models.py
backend/tests/routes/: test_articles.py  test_auth.py  test_comments.py  test_interactions.py  test_magazines.py  test_news.py  test_topics.py  test_users.py
backend/tests/security/: test_password.py  (+1 more)
(+77 files in other folders)
